<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/linkedin"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/linkedin"
            />

        <item
            android:id="@+id/job_search"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/jobsearch"/>

        <item
            android:id="@+id/pulse"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/pulse"/>

        <item
            android:id="@+id/yoke_shin"
            android:icon="@drawable/ic_more_horiz_black_24dp"
            android:title="@string/yokeshin"/>

        <item
            android:id="@+id/won_zin"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/wonzin"/>

    </group>
</menu>